@@ -59,11 +59,9 @@ If the service is running, send it a INT signal.
 If the service is running, send it a QUIT signal.
 .TP
 .B 1
-User-defined 1.
 If the service is running, send it a USR1 signal.
 .TP
 .B 2
-User-defined 2.
 If the service is running, send it a USR2 signal.
 .TP
 .B term
